# production-grade-enterpise-rag

./: .dockerignore  .gitignore  Dockerfile  README.md  cloudbuild.yaml  eval_summary.json  evaluation_dataset.json  main.py  precision_results.csv  project_structure.txt  pyproject.toml  pyrightconfig.json  requirements-backend.txt  requirements-ingestion.txt  requirements-render.txt  requirements-ui.txt  requirements.txt
.devcontainer/: devcontainer.json
app/: config.py  main.py
app/agents/: graph.py  state.py
app/agents/evals/: eval_graph.py  eval_state.py
app/agents/guardrails/: colang_rules.py  hf_embedding_provider.py  rails.py
app/agents/nodes/: planner.py  responder.py  retriever.py
app/ingestion/: processor.py  test.py
app/ingestion/chunking/: splitter.py
app/ingestion/loaders/: html.py  office.py  (+2 more)
data/: precision_results.csv
docker/: backend.Dockerfile  ingestion.Dockerfile  ui.Dockerfile
notebooks/: 01.Guardrails.ipynb  02.LLMGateways.ipynb  llm_ans.txt
terraform/: cloudrun.tf  ingestion.tf  main.tf  providers.tf
tests/: chunks.ipynb  chunks.py  context_latency_eval.py  eval_router.py  generate_eval_dataset.py  precision.py  ragas.ipynb  ragas_dataset_generation.py  ragas_eval.py  test_guardrails.py
tests/notebooks/: llm_ans.txt  routing.ipynb
tests/results/: eval_results.csv  route_eval_summary.json
tests/test_datasets/: dataset copy.json  dataset.json  eval_results.csv  evaluation_dataset.json  evaluation_dataset_3.json  ragas_results.csv  router_eval_dataset_200.json  router_eval_results.csv
ui/: app.py  streamlitapp.py
(+6 files in other folders)
