[project]
name = "enterpriserag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "cloud-sql-python-connector>=1.20.4",
    "deepeval>=4.1.0",
    "fastapi>=0.139.0",
    "flashrank>=0.2.10",
    "google-cloud-discoveryengine>=0.20.1",
    "google-cloud-documentai>=3.15.0",
    "google-cloud-storage>=2.19.0",
    "google-genai>=1.75.0",
    "ipykernel>=7.3.0",
    "langchain==0.3.27",
    "langchain-community==0.3.27",
    "langchain-google-vertexai>=2.1.2",
    "langchain-groq>=0.3.8",
    "langchain-openai==0.3.30",
    "langgraph>=1.0.1",
    "langsmith>=0.10.5",
    "logfire[fastapi,requests]>=4.37.0",
    "loguru>=0.7.3",
    "nemoguardrails>=0.11.0",
    "nest-asyncio>=1.6.0",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "pg8000>=1.31.5",
    "psycopg-pool>=3.3.1",
    "psycopg[binary]>=3.3.4",
    "pypdf>=6.14.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "python-pptx>=1.0.2",
    "pytz>=2026.2",
    "qdrant-client>=1.18.0",
    "ragas==0.3.9",
    "redis>=7.4.1",
    "redisvl>=0.23.0",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.51",
    "streamlit>=1.59.2",
    "uvicorn[standard]>=0.51.0",
]
